# Dimension

./: .gitignore  .gitmodules
DimensionPythonClient/: client.py
DimensionServer/: CMakeLists.txt
DimensionServer/src/: CMakeLists.txt  main.cpp
DimensionServer/src/Game/: Card.cpp  Card.hpp
DimensionServer/src/Network/: Bucket.cpp  Bucket.hpp  Client.cpp  Client.hpp  Connection.cpp  Connection.hpp  ConnectionHandler.cpp  ConnectionHandler.hpp  Handlers.cpp  Handlers.hpp  Lobby.cpp  Lobby.hpp  ResponseFunctionHelper.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp  SessionHandler.cpp  SessionHandler.hpp
DimensionServer/src/Network-TCP/: Client.hpp  Connection.hpp  Lobby.hpp  ResponseFunctionHelper.hpp
DimensionServer/src/Python/: CMakeLists.txt  Helpers.cpp  Helpers.hpp  Module.cpp
DimensionServer/test/: CMakeLists.txt  CatchMain.cpp
DimensionServer/test/Network/: test_Connection.cpp
DimensionServer/test/Network-TCP/: test_Connection.cpp
DimensionServer/test/Python/: test_Helpers.cpp  test_Interpreter.cpp
DimensionServer/test/src/: test_Server.cpp
